--- a/Project/public/style.css
+++ b/Project/public/style.css
@@ -18,3 +18,14 @@ main {
     min-height: 87vh;
 }
 
+.efrat{
+    width: 100%;
+}
+
+.figcaption{
+    transform: translateY(-37px);
+    font-weight: 700;
+    background-color: #6c757da1;
+    padding-left: 1rem;
+}
+
